--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: PVBcorrect
 Type: Package
-Title: Perform partial verification bias correction for estimates of accuracy measures in diagnostic accuracy studies
+Title: Partial verification bias correction for estimates of accuracy measures in diagnostic accuracy studies
 Version: 0.1.0
 Authors@R: 
     person(given = "Wan Nor",
@@ -13,12 +13,19 @@ Maintainer: Wan Nor Arifin <wnarifin@gmail.com>
 URL: https://github.com/wnarifin/PVBcorrect/
 Description: The package contains a number of functions to perform partial verification bias 
     (PVB) correction for estimates of accuracy measures in diagnostic accuracy studies. 
-    The available methods are Begg and Greenes' method (extended by Alonzo), multiple imputation 
-    method (logistic regression) and EM-based logistic regression method.
+    The available methods are: Begg and Greenes' method (as extended by Alonzo & Pepe, 2005),
+    Begg and Greenes' method 1 and 2 (with PPV and NPV as extended by deGroot et al, 2011),
+    multiple imputation method by logistic regression (Harel & Zhou, 2006),
+    and EM-based logistic regression method (Kosinski & Barnhart, 2003).
 License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
 Imports:
-    prediction,
-    mice,
-    simstudy
+    boot,
+    mice
+RoxygenNote: 7.1.2
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
+Depends: 
+    R (>= 2.10)
