added IPB sampling method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(acc_dg1)
 export(acc_dg2)
 export(acc_ebg)
 export(acc_em)
+export(acc_ipb)
 export(acc_mi)
 export(view_table)
 importFrom(stats,addmargins)
