--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: PVBcorrect
 Type: Package
 Title: Partial verification bias correction for estimates of accuracy measures in diagnostic accuracy studies
-Version: 0.1.1
+Version: 0.2.1
 Authors@R: 
     person(given = "Wan Nor",
            family = "Arifin",
@@ -14,7 +14,8 @@ URL: https://github.com/wnarifin/PVBcorrect/
 Description: The package contains a number of functions to perform partial verification bias 
     (PVB) correction for estimates of accuracy measures in diagnostic accuracy studies. 
     The available methods are: Begg and Greenes' method (as extended by Alonzo & Pepe, 2005),
-    Begg and Greenes' method 1 and 2 (with PPV and NPV as extended by deGroot et al, 2011),
+    Begg and Greenes' method 1 and 2 (with PPV and NPV as extended by deGroot et al, 2011), 
+    IPB sampling method (Arifin & Yusof, 2022),
     multiple imputation method by logistic regression (Harel & Zhou, 2006),
     and EM-based logistic regression method (Kosinski & Barnhart, 2003).
 License: GPL (>= 3)
@@ -23,7 +24,7 @@ LazyData: true
 Imports:
     boot,
     mice
-RoxygenNote: 7.2.1
+RoxygenNote: 7.3.1
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
