--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,8 @@ export(acc_ebg)
 export(acc_em)
 export(acc_ipb)
 export(acc_mi)
+export(acc_sipw)
+export(acc_sipwb)
 export(view_table)
 importFrom(stats,addmargins)
 importFrom(stats,glm)
