--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,8 @@
 Package: PVBcorrect
 Type: Package
-Title: Partial verification bias correction for estimates of accuracy measures in diagnostic accuracy studies
-Version: 0.3.0
+Title: Partial verification bias correction for estimates of accuracy
+        measures in diagnostic accuracy studies
+Version: 0.3.1
 Authors@R: 
     person(given = "Wan Nor",
            family = "Arifin",
@@ -19,15 +20,13 @@ Description: The package contains a number of functions to perform partial verif
     Scaled Inverse Probability Resampling methods (Arifin & Yusof, 2023; Arifin & Yusof, 2025),
     multiple imputation method by logistic regression (Harel & Zhou, 2006),
     and EM-based logistic regression method (Kosinski & Barnhart, 2003).
-License: GPL (>= 3)
+License: GPL (>= 3) + file LICENSE
 Encoding: UTF-8
 LazyData: true
-Imports:
-    boot,
-    mice
+Imports: boot, mice
 RoxygenNote: 7.3.2
-Suggests: 
-    testthat (>= 3.0.0)
+Suggests: testthat (>= 3.0.0)
 Config/testthat/edition: 3
-Depends: 
-    R (>= 2.10)
+Depends: R (>= 2.10)
+NeedsCompilation: no
+Packaged: 2025-09-06 05:37:47 UTC; wnari
