--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,14 +7,17 @@ export(acc_dg2)
 export(acc_ebg)
 export(acc_em)
 export(acc_ipb)
+export(acc_ipw)
 export(acc_mi)
 export(acc_sipw)
 export(acc_sipwb)
 export(view_table)
 importFrom(stats,addmargins)
 importFrom(stats,glm)
+importFrom(stats,na.omit)
 importFrom(stats,predict)
 importFrom(stats,qnorm)
 importFrom(stats,qt)
+importFrom(stats,quantile)
 importFrom(stats,reformulate)
 importFrom(stats,sd)
